<resources>
    <string name="app_name">Table Calculator</string>
    <string name="multiplication_format">%d X %d = %d\n</string>
    <string name="submit">Submit</string>
    <string name="header">Enter the number to get table</string>
    <string name="output">Table Output</string>
    <string name="inputHint">Enter the number being multiplied</string>
    <string name="inputHint2">Enter number up to  multiplying</string>
</resources>